--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         />
         <h2>Yapılacaklar Listesi</h2>
         <input type="text" id="task" placeholder="Bugün ne yapacaksın?" />
-        <span onclick="yeniElement()" id="liveToastBtn" class="button"
+        <span onclick="newElement()" id="liveToastBtn" class="button"
           >Ekle</span
         >
       </div>
